# automated-screenshot-agent

./: .env.example  .gitattributes  .gitignore  README.md  pyproject.toml
.github/workflows/: on-pull-requests-step00.yaml  on-pull-requests-step01.yaml  on-pull-requests-step02.yaml
docker/: docker-compose.yml
docker/configs/db_initdb/: 02-create-table.sql
src/: config.py  main.py  scheduler.py  urls.py
src/collector/: browser.py  screenshot.py
src/inference/: azure_client.py  dspy_expts.py  ollama_client.py  runner.py  schema.py
src/preprocess/: clean.py
src/storage/: db.py  sink.py
step00/: README.md  config.sample.ini  pyproject.toml
step00/src/: banner.txt  capture.py  config.py  logger.py  models.py  screenshotAgent.py
step00/tests/: capture_test.py  config_test.py  logger_test.py  models_test.py  screenshotAgent_test.py
step01/: .gitplaceholder  README.md  config copy.ini  config.sample.ini  pyproject.toml
step01/data/browser_context/: .gitplaceholder
step01/licenses/: playwright_mcp_server
step01/src/: banner.txt  config.py  custom.py  kernel_agent.py  kernel_plugins.py  logger.py  mcp_client.py  models.py  playwright_mcp_server.py  screenshotAgent.py
step01/tests/: capture_test.py  config_test.py  models_test.py  screenshotAgent_test.py
step02/: .env.example  README.md  pyproject.toml
step02/docker/: docker-compose.yml
step02/src/: agent_tools.py  agent_workflow.py  capture.py  config.py  kernel_agent.py  main.py  screenshotAgent.py
step02/src/collector/: __init__.py  (+1 more)
step02/tests/: custom_test.py  screenshotAgent_test.py
(+6 files in other folders)
