[project]
name = "automated-screenshot-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "dotenv>=0.9.9",
    "dspy>=3.0.3",
    "httpx>=0.28.1",
    "pillow>=12.0.0",
    "playwright>=1.55.0",
    "psycopg>=3.2.11",
    "pydantic>=2.12.3",
    "readability>=0.3.2",
    "tenacity>=9.1.2",
    "trafilatura>=2.0.0",
]
