[project]
name = "automated-screenshot-agent"
version = "0.1.0"
description = "scheduled screenshot agent automatically"
readme = "README.md"
requires-python = ">=3.12, <3.13"
dependencies = [
    "fastapi>=0.120.0",
    "playwright>=1.55.0",
    "semantic-kernel>=1.36.0",
    "uvicorn>=0.38.0",
]

[dependency-groups]
dev = [
    "flake8>=7.3.0",
    "openapi-spec-validator>=0.7.2",
]
test = [
    "httpx>=0.28.1",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
]
